fix contrast on index intro-to-services images for better readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,6 @@ body {
     height: 500px;
     width: 100%;
     overflow: hidden;
-    position: top;
 }
 
 #hero-image {
